--- a/nginx.conf
+++ b/nginx.conf
@@ -4,8 +4,18 @@ server {
 
     root /usr/share/nginx/html;
     index index.html;
+    
+    # Ensure correct content types for JS/CSS
+    include /etc/nginx/mime.types;
 
     location / {
-        try_files $uri /index.html;
+        # This is critical for React Router (Single Page Apps)
+        try_files $uri $uri/ /index.html;
+    }
+
+    # Optional: Cache static assets for better performance
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+        expires 30d;
+        add_header Cache-Control "public, no-transform";
     }
 }
