--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,18 +1,3 @@
-steps:
-  - name: gcr.io/cloud-builders/docker
-    args:
-      - build
-      - -t
-      - gcr.io/$PROJECT_ID/ideaholidaytourmaker1.0:$COMMIT_SHA
-      - -t
-      - gcr.io/$PROJECT_ID/ideaholidaytourmaker1.0:latest
-      - .
-
-  - name: gcr.io/cloud-builders/docker
-    args:
-      - push
-      - gcr.io/$PROJECT_ID/ideaholidaytourmaker1.0:$COMMIT_SHA
-
   - name: gcr.io/google.com/cloudsdktool/cloud-sdk
     entrypoint: gcloud
     args:
@@ -26,16 +11,5 @@ steps:
       - --platform
       - managed
       - --allow-unauthenticated
-      - --memory
-      - 2Gi
-      - --cpu
-      - "2"
-
-images:
-  - gcr.io/$PROJECT_ID/ideaholidaytourmaker1.0:$COMMIT_SHA
-  - gcr.io/$PROJECT_ID/ideaholidaytourmaker1.0:latest
-
-timeout: 1800s
-
-options:
-  logging: CLOUD_LOGGING_ONLY
+      - --port
+      - "80"
