--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "idea-holiday-tour-maker-1.0",
+  "name": "idea-tour-maker-1.0",
   "private": true,
   "version": "0.0.0",
   "type": "module",
