feat: Enhance data loading and caching
Refactors `getData` in `AdminService` and `AgentService` to merge stored local data with code defaults, ensuring new default entries are included without overwriting user modifications.

Updates `OperatorDashboard` to include currency conversion for earnings calculation and adds relevant icons.

Configures Nginx to aggressively cache static assets with long `expires` and `Cache-Control` headers, while ensuring the root application entry point (`/`) is never cached, providing immediate access to the latest version after deployments.

--- a/nginx.conf
+++ b/nginx.conf
@@ -12,16 +12,18 @@ server {
     gzip_proxied expired no-cache no-store private auth;
     gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
+    # Main Entry Point - NO CACHE
+    # This ensures users always get the latest version of the app immediately after deployment
     location / {
-        # First attempt to serve request as file, then
-        # as directory, then fall back to redirecting to index.html
         try_files $uri $uri/ /index.html;
+        add_header Cache-Control "no-store, no-cache, must-revalidate";
     }
 
-    # Cache static assets for performance
+    # Static Assets - Long Cache
+    # These files (images, built JS chunks) have hashes in filenames, so they can be cached safely
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
         expires 1y;
-        add_header Cache-Control "public, no-transform";
+        add_header Cache-Control "public, max-age=31536000, immutable";
     }
 
     # Health check endpoint for Cloud Run
