feat: Sync user directory from Firestore on admin login
This change implements a mechanism to synchronize the local user directory with data from Firestore.
When an administrator logs in, the `authService.syncDirectory()` method will be called to fetch the latest user data from the cloud.
This ensures that the application always reflects the most up-to-date user information, especially important for administrative tasks.

Additionally, mock users are now initialized in local storage if no users are found, providing a consistent starting point.
The `profileService.fetchUser` function has been removed as its functionality is now covered by the global sync and direct access within `adminService`.

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -23,11 +23,11 @@ steps:
     args:
       - 'run'
       - 'deploy'
-      - 'idea-holiday-platform'
+      - 'idea-tour-maker-1-0'
       - '--image'
       - 'gcr.io/$PROJECT_ID/idea-holiday-tour-maker:$COMMIT_SHA'
       - '--region'
-      - 'asia-south1' # Low latency for Lucknow/India
+      - 'us-west1'
       - '--platform'
       - 'managed'
       - '--allow-unauthenticated' # Public frontend access
