--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "react-router-dom": "^7.12.0",
     "jspdf": "2.5.1",
     "jspdf-autotable": "3.5.31",
-    "xlsx": "latest",
     "firebase": "^12.7.0",
     "firebase-admin": "^13.6.0",
     "firebase-functions": "^7.0.3",
-    "nodemailer": "^7.0.12"
+    "nodemailer": "^7.0.12",
+    "buffer": "^6.0.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
