--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "firebase-admin": "^13.6.0",
     "firebase-functions": "^7.0.3",
     "nodemailer": "^7.0.12",
-    "buffer": "^6.0.3"
+    "buffer": "^6.0.3",
+    "crypto": "^1.0.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
