--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^7.12.0",
     "jspdf": "2.5.1",
     "jspdf-autotable": "3.5.31",
+    "html2canvas": "1.4.1",
     "firebase": "^12.7.0",
     "firebase-admin": "^13.6.0",
     "firebase-functions": "^7.0.3",
