--- a/functions/package.json
+++ b/functions/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "functions",
   "scripts": {
@@ -15,7 +16,9 @@
   "dependencies": {
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^4.5.0",
-    "nodemailer": "^6.9.8"
+    "nodemailer": "^6.9.8",
+    "googleapis": "^128.0.0",
+    "@google/genai": "^0.0.10"
   },
   "devDependencies": {
     "typescript": "^4.9.5",
