--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "firebase-functions": "^7.0.3",
     "nodemailer": "^7.0.12",
     "buffer": "^6.0.3",
-    "crypto": "^1.0.1"
+    "crypto": "^1.0.1",
+    "googleapis": "^171.4.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
